K8-apps/library-and-monitoring-k8/manifests/library-service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "library-service"
  namespace: "default"
  labels:
    app: "library-service"
spec:
  ports:
  - name: http
    protocol: "TCP"
    port: 8080
    targetPort: 8080
  selector:
    app: "library-app"
  type: "ClusterIP"
